--- a/main.css
+++ b/main.css
@@ -1,9 +1,16 @@
 body {
     background-color: #ffa;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h1 {
-    color: #880000;
+    border: 5px solid #ffffff;
+    border-radius: 20px 0 20px 0;
+    color: #ffffff;
+    padding: 20px;
+    text-align: center;
 }
 
 h2 {
@@ -11,5 +18,13 @@ h2 {
 }
 
 p {
+    border-left: 10px solid #77aaff;
+    font-size: 20px
+    line-height: 1.6;
+    margin: 20px;
+    padding-left: 10px;
+}
 
+img {
+    max-width: 100%
 }
